# QBW_Chatbot

./: README.md  main.py  pyproject.toml  requirements.txt
app/src/: config.json  ingestion_retrieval_pipeline.py  main.py  model_augmentation_pipeline.py
data/text_files/: services.txt  terms_conditions.txt
playground/: document.ipynb  scrape_data.py
